--- a/index.html
+++ b/index.html
@@ -52,14 +52,19 @@
     <section id="guide">
             <div class="jumbotron jumbotron-fluid ">
                 <div class="container text-center text-myblue">
-                    <h1 class="">How it works?</h1>
-                    <img src="images/mediaPlayer/mediaPlayer.png" class="align-self-center mr-3" alt="media player">
-                    <img src="" alt="">
-                    <p></p>
-                    <img src="" alt="">
-                    <p class=""></p>
-                    <img src="" alt="">
-                    <p></p>
+                    <h1>How it works?</h1>
+                    <img class="mediaplayer" src="images/mediaplayer.png" class="align-self-center mr-3" alt="media player">
+                    <div>
+                        <img class="howtopicture" src="images/howToPicture.png" alt="">
+                        <h2>Step #1</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, in officia.</p>
+                        <img class="howtopicture" src="images/howToPicture.png" alt="">
+                        <h2>Step #2</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, in officia.</p>
+                        <img class="howtopicture" src="images/howToPicture.png" alt="">
+                        <h2>Step #3</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, in officia.</p>
+                    </div>
                 </div>
             </div>
     </section>
